--- a/packages/frontend/src/assets/index.scss
+++ b/packages/frontend/src/assets/index.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'buttons';
 @import 'headings';
+@import 'navbar';
 
 :root {
   --bs-body-font-size: 2rem;
